vacation routes for doctor
