# src/dtos/appointments.dto.ts
@@ -53,79 +53,93 @@ export class RescheduleAppointmentByDoctorDto {
 
 
 export class EnterDoctorScheduleDto {
-  @IsOptional()
-  clinicId?: string | null;
+    @IsOptional()
+    clinicId?: string | null;
 
-  @IsInt()
-  @Min(0)
-  @Max(6)
-  @IsNotEmpty()
-  workingDay: number; 
+    @IsInt()
+    @Min(0)
+    @Max(6)
+    @IsNotEmpty()
+    workingDay: number;
 
-  @IsString()
-  @IsNotEmpty()
-  startTime: string; 
+    @IsString()
+    @IsNotEmpty()
+    startTime: string;
 
-  @IsString()
-  @IsNotEmpty()
-  endTime: string;
+    @IsString()
+    @IsNotEmpty()
+    endTime: string;
 
-  @IsInt()
-  @IsNotEmpty()
-  slotDuration: number; 
+    @IsInt()
+    @IsNotEmpty()
+    slotDuration: number;
 
-  @IsInt()
-  @IsOptional()
-  bufferTime?: number = 0; 
+    @IsInt()
+    @IsOptional()
+    bufferTime?: number = 0;
 
-  @IsBoolean()
-  @IsNotEmpty()
-  isOnline: boolean;
+    @IsBoolean()
+    @IsNotEmpty()
+    isOnline: boolean;
 }
 
 export class EditDoctorScheduleDto {
-  @IsUUID()
-  @IsNotEmpty()
-  scheduleId: string;
+    @IsUUID()
+    @IsNotEmpty()
+    scheduleId: string;
 
-  @IsOptional()
-  clinicId?: string | null;
+    @IsOptional()
+    clinicId?: string | null;
 
-  @IsOptional()
-  @IsInt()
-  @Min(0)
-  @Max(6)
-  workingDay?: number;
+    @IsOptional()
+    @IsInt()
+    @Min(0)
+    @Max(6)
+    workingDay?: number;
 
-  @IsOptional()
-  @IsString()
-  startTime?: string;
+    @IsOptional()
+    @IsString()
+    startTime?: string;
 
-  @IsOptional()
-  @IsString()
-  endTime?: string;
+    @IsOptional()
+    @IsString()
+    endTime?: string;
 
-  @IsOptional()
-  @IsInt()
-  slotDuration?: number;
+    @IsOptional()
+    @IsInt()
+    slotDuration?: number;
 
-  @IsOptional()
-  @IsInt()
-  bufferTime?: number;
+    @IsOptional()
+    @IsInt()
+    bufferTime?: number;
 
-  @IsOptional()
-  @IsBoolean()
-  isOnline?: boolean;
+    @IsOptional()
+    @IsBoolean()
+    isOnline?: boolean;
 
-  @IsOptional()
-  @IsBoolean()
-  isActive?: boolean;
+    @IsOptional()
+    @IsBoolean()
+    isActive?: boolean;
 
-  @IsOptional()
-  @IsString()
-  breakStart?: string;
+    @IsOptional()
+    @IsString()
+    breakStart?: string;
 
-  @IsOptional()
-  @IsString()
-  breakEnd?: string;
+    @IsOptional()
+    @IsString()
+    breakEnd?: string;
+}
+
+export class HandleDoctorVacationDto {
+    @IsUUID()
+    @IsNotEmpty()
+    scheduleId: string;
+
+    @IsDateString()
+    @IsNotEmpty()
+    startDate: string;
+
+    @IsDateString()
+    @IsNotEmpty()
+    endDate: string;
 }
